src/objects/Billing_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Billing_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdminMax__c</fullName>
        <label>B Max</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdminMin__c</fullName>
        <label>B Min</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CodeStatus__c</fullName>
        <formula>if(Active__c, &apos;Active&apos;, &apos;InActive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultBillingCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Billing Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Billing_Code__c.DefaultCode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Billing_Code__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Billing_Code__c</referenceTo>
        <relationshipName>Billing_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DefaultCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkCommunication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Case Note Entry Visualforce pages. When this option is selected, the user will see the Relate Communication History functionality on the edit and add case note entry Visualforce pages.</description>
        <inlineHelpText>If specified, when editing a Case Note Entry with this billing code, the user will have the option of relating an Open Activity and Attachment.</inlineHelpText>
        <label>Link Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Activity Code</label>
    <listViews>
        <fullName>Active_Billing_Codes_Specific_Customer</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>AdminMin__c</columns>
        <columns>AdminMax__c</columns>
        <columns>DefaultBillingCode__c</columns>
        <columns>DefaultCode__c</columns>
        <columns>CodeStatus__c</columns>
        <columns>LinkCommunication__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>St. Joseph</value>
        </filters>
        <label>Active Billing Codes - Specific Customer</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Adminsure</fullName>
        <columns>Active__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>AdminMin__c</columns>
        <columns>AdminMax__c</columns>
        <columns>LinkCommunication__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Adminsure</value>
        </filters>
        <label>Adminsure</label>
        <sharedTo>
            <role>SupervisorMedicalAdminServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Billing_Codes</fullName>
        <columns>NAME</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Mitchell</value>
        </filters>
        <label>All Inactive Billing Codes</label>
    </listViews>
    <listViews>
        <fullName>Broadspire</fullName>
        <columns>Active__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>AdminMin__c</columns>
        <columns>AdminMax__c</columns>
        <columns>LinkCommunication__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Broadspire</value>
        </filters>
        <label>Broadspire</label>
        <sharedTo>
            <role>SupervisorMedicalAdminServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_All_Active_Billing_Codes</fullName>
        <columns>Active__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>AdminMin__c</columns>
        <columns>AdminMax__c</columns>
        <columns>DefaultBillingCode__c</columns>
        <columns>DefaultCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>0</value>
        </filters>
        <label>Default All Active Billing Codes</label>
    </listViews>
    <nameField>
        <label>Activity Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DefaultBillingCodeRequiredIfNotADefault</fullName>
        <active>true</active>
        <description>Enforces that the record has a lookup to the default billing code record if it is not a default</description>
        <errorConditionFormula>IF(NOT( DefaultCode__c ) &amp;&amp; ISBLANK(DefaultBillingCode__c), true, false)</errorConditionFormula>
        <errorDisplayField>DefaultBillingCode__c</errorDisplayField>
        <errorMessage>If this is not a default billing code, the lookup to the parent default billing code is required.</errorMessage>
    </validationRules>
</CustomObject>